<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Part-y</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Connexion">Connexion</string>
    <string name="Login">Login</string>
    <string name="MotDePasse">Mot de passe</string>
    <string name="ConnRef">CONNECTION REFUSE</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="Creer">Créer</string>
    <string name="Calendrier">Calendrier</string>
    <string name="Gerer">Gérer</string>
    <string name="Parametre">Paramètre</string>
    <string name="title_activity_creer">CreerActivity</string>
    <string name="title_activity_calendrier">CalendrierActivity</string>
    <string name="title_activity_gerer">GererActivity</string>
    <string name="title_activity_parametre">ParametreActivity</string>
    <string name="EventCreate">Création d\'un évenement</string>
    <string name="NbPersonne">Nombre de Personne</string>
    <string name="AgeMoy">Age Moyen</string>
    <string name="Theme">Thème</string>
    <string name="Valider">Valider</string>
    <string name="title_activity_theme">ThemeActivity</string>
    <string name="Titre">Titre</string>
	<string name="Event">EVENEMENT A VENIR</string>
	
</resources>
