<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/Calendrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Creer"
        android:layout_alignBottom="@+id/Creer"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:text="@string/Calendrier" />

    <Button
        android:id="@+id/Parametre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Gerer"
        android:layout_alignBottom="@+id/Gerer"
        android:layout_alignLeft="@+id/Calendrier"
        android:text="@string/Parametre" />

    <Button
        android:id="@+id/Gerer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Creer"
        android:layout_below="@+id/Creer"
        android:layout_marginTop="83dp"
        android:text="@string/Gerer" />

    <Button
        android:id="@+id/Creer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="92dp"
        android:text="@string/Creer" />

</RelativeLayout>