<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Connexion" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="0dp" >
    </LinearLayout>

    <TextView
        android:id="@+id/Titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_marginBottom="36dp"
        android:text="@string/Login" />

    <EditText
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Titre"
        android:layout_alignBottom="@+id/Titre"
        android:layout_toRightOf="@+id/NbPersonne"
        android:ems="10" android:inputType="text">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/MotDePasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/NbPersonne"
        android:layout_alignBottom="@+id/NbPersonne"
        android:layout_alignLeft="@+id/Login"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/NbPersonne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Titre"
        android:layout_centerVertical="true"
        android:text="@string/MotDePasse" />

    <Button
        android:id="@+id/Connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/MotDePasse"
        android:layout_below="@+id/MotDePasse"
        android:layout_marginTop="34dp"
        android:onClick="Con"
        android:text="@string/Connexion" />

    <TextView
        android:id="@+id/ConnRef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:text="@string/ConnRef" />

</RelativeLayout>